[tool.poetry]
name = "tservice-plugins"
version = "0.1.0"
description = "A plugin repo for tservice."
authors = ["YJC <yjcyxky@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
multiqc = "^1.9"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
